Added custom plugin support